Revision history for Hash::Match

{{$NEXT}}

v0.7.0    2018-10-19 17:16:55+01:00 Europe/London
  [Enhancements]
  - Uses Ref::Util for improved performance.

  [Documentation]
  - The POD is build with Pod::Weaver.

  - Added INSTALL file to the distribution.

  [Toolchain]
  - Reorganised dist.ini to improve build process.

  - Includes cpanfile for development.

  [Other]
  - Changed README to Markdown format.

  - Removed dependency on version.

v0.6.2    2017-12-08 08:49:54+00:00 Europe/London

        - Added missing test prereqs.

v0.6.1    2017-12-06 08:03:04+00:00 Europe/London

        - Added missing prereqs (Mohammad S Anwar)

        - Updated Copyright year in POD

v0.6.0    2017-12-04 17:27:59+00:00 Europe/London

        - Switch to use List::AllUtils

        - Removed use of Const::Fast from xt/pod-spelling.t.

        - Switch to use Dist::Zilla for building release.

v0.5.3  2014-08-16

        - Added SEE ALSO section to the POD.

	- Fixed license setting to make CPANTS happy.

v0.5.2  2014-07-01

        - Changed POD to not use deprecated keywords in the examples.

        - Made minimum version for List::MoreUtils explicit in the
          prereqs.

v0.5.1  2014-06-30

        - Added missing prereq.

	- Minor updates to POD and README.

v0.5.0  2014-06-28

	- Further code simplication.

	- Added "-all", "-any", "-notall" and "-notany" keywords.

	- The "-and", "-or" and "-not" keys are deprecated.

	- Match compiler will die on an unknown keyword when the value
          is a hash or array reference.

	- Reorganized tests. Test::More v0.98 or newer is now required
          since it uses subtests.

	- Added tests for exceptions, and tweaked error messages
          slightly.

v0.4.0  2014-06-26

        - Added the ability to use functions for key matching.

v0.3.1  2014-06-26

        - Fixed bug with regex key matching.

v0.3.0  2014-06-26

        - Internal code cleanup.

        - Fixed handling of code references for matching.
