@@ -1,29 +1,0 @@
-sudo: false
-language: perl
-perl:
-   - 'blead'
-   - '5.8'
-   - '5.10'
-   - '5.12'
-   - '5.14'
-   - '5.16'
-   - '5.18'
-   - '5.20'
-   - '5.22'
-   - '5.24'
-   - '5.26'
-matrix:
-   allow_failures:
-      - perl: 'blead'
-      - perl: '5.8'
-      - perl: '5.10'
-   fast_finish: true
-before_install:
-   - git config --global user.name "TravisCI"
-   - git config --global user.email $HOSTNAME":not-for-mail@travis-ci.org"
-install:
-   - cpanm --quiet --notest --skip-satisfied Dist::Zilla
-   - "dzil authordeps          --missing | grep -vP '[^\\w:]' | xargs -n 5 -P 10 cpanm --quiet --notest"
-   - "dzil listdeps   --author --missing | grep -vP '[^\\w:]' | cpanm --verbose"
-script:
-   - dzil smoke --release --author
