@@ -85,9 +85,6 @@ skiptest = use_strict
 version_extractor = Module::Metadata
 verify_prereqs = 1
 
-;;[TravisYML]
-;; perl_version = -blead -5.8 -5.10 5.12 5.14 5.16 5.18 5.20 5.22 5.24 5.26
-
 [@Git]
 allow_dirty = dist.ini
 allow_dirty = .travis.yml
